<resources>
    <string name="app_name">Abiskar</string>
    <string name="splash_screen">আবিষ্কার</string>
    <string name="splash_screen_2">- আপন সন্ধানে</string>
    <string name="TODO">To DO</string>
    <string name="alertTitle">Confirm Exit</string>
    <string name="alertMessege">Are you sure you want to exit?</string>
    <string name="hint_1">Enter your email address</string>
    <string name="hint_2">Enter your password</string>
    <string name="hint_3">Confirm your password</string>
    <string name="hint_4">Remember me</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="alert_text_hint">loading...</string>
    <string name="alert_text_hint_button">Main Page</string>
    <string name="body">Hey! Please check is there any class of your "Abiskar Online Coaching" </string>
    <string name="admin_button">Admin Panel</string>
    <string name="alert_admin_button">Set a Alert Time for Students</string>
    <string name="clock_hint">Type your alert message here...</string>
    <string name="set_alert">Set Alert</string>
    <string name="stop_alert">Stop Alarm</string>
    <string name="delete_alert">Delete All Past Alert</string>
    <string name="add_student">Add Student</string>
    <string name="student_id">Enter student id...</string>
    <string name="cancel_hint">Cancel</string>
    <string name="registration_hint">Not registered yet? Want to register?</string>
    <string name="contact_hint">Want to contact with us?</string>
    <string name="payment_hint">আপনি যদি আপনার মাসিক ফি পরিশোধ না করে থাকেন তাহলে অনুগ্রহপূর্বক পরিশোধ করে দিবেন। আবিষ্কারের সাথে থাকার জন্য ধন্যবাদ।</string>
    <string name="button_hint_1">নৈবত্তিক ও সৃজনশীল প্রশ্ন</string>
    <string name="button_hint_2">ক্লাস ভিডিও</string>
    <string name="button_hint_3">শেয়ারকৃত নোট</string>
    <string name="button_hint_4">Live ক্লাসের রুটিন ও জয়েন লিংক</string>
    <string name="button_hint_5">বাড়ির কাজ</string>
    <string name="button_hint_6">নোটিশ বোর্ড</string>
    <string name="button_hint_7">সকল NCTB বইসমূহ</string>
    <string name="button_hint_8">Contact with us</string>
    <string name="subject_hint">তুমি কোন বিষয়ে পরীক্ষা দিতে আগ্রহী?</string>
    <string name="subject_hint_1">পদার্থবিজ্ঞান ১ম পত্র</string>
    <string name="subject_hint_2">পদার্থবিজ্ঞান ২য় পত্র</string>
    <string name="subject_hint_3">রসায়ন ১ম পত্র</string>
    <string name="subject_hint_4">রসায়ন ২য় পত্র</string>
    <string name="subject_hint_5">জীববিজ্ঞান ১ম পত্র</string>
    <string name="subject_hint_6">জীববিজ্ঞান ২য় পত্র</string>
    <string name="subject_hint_7">উচ্চতর গণিত ১ম পত্র</string>
    <string name="subject_hint_8">উচ্চতর গণিত ২য় পত্র</string>
    <string name="subject_hint_9">ICT</string>
    <string name="subject_hint_10">ইংরেজি ১ম পত্র</string>
    <string name="subject_hint_11">ইংরেজি ২য় পত্র</string>
    <string name="video_hint">তুমি কোন বিষয়ের ভিডিও টিউটোরিয়াল দেখতে আগ্রহী?</string>
    <string name="share_notes_hint">তুমি কোন বিষয়ের নোট শেয়ার করতে আগ্রহী?</string>
    <string name="homework_hint">তুমি কোন বিষয়ের বাড়ির কাজ দিতে আগ্রহী?</string>
    <string name="link_hint">রুটিন দেখে সময়মতো নিচের বিষয়ে ক্লিক করে ক্লাসে জয়েন করো।</string>
</resources>