<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Shared_Notes.Share_Notes_Activity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/share_notes_hint"
        android:textAlignment="center"
        android:textColor="#F61302"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:weightSum="12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <Button
                android:id="@+id/shareNotesActivitySUbject_1_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:text="@string/subject_hint_1"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/shareNotesActivitySUbject_2_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/subject_hint_2"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <Button
                android:id="@+id/shareNotesActivitySUbject_3_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:text="@string/subject_hint_3"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/shareNotesActivitySUbject_4_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/subject_hint_4"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <Button
                android:id="@+id/shareNotesActivitySUbject_5_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:text="@string/subject_hint_5"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/shareNotesActivitySUbject_6_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/subject_hint_6"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <Button
                android:id="@+id/shareNotesActivitySUbject_7_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:text="@string/subject_hint_7"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/shareNotesActivitySUbject_8_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/subject_hint_8"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/shareNotesActivitySUbject_9_ButtonID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:text="@string/subject_hint_9"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <Button
                android:id="@+id/shareNotesActivitySUbject_10_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:text="@string/subject_hint_10"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/shareNotesActivitySUbject_11_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/subject_hint_11"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>