<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ApplicationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D52C1F"
        android:padding="10dp"
        android:text="@string/payment_hint"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />-->

    <Button
        android:id="@+id/applicationActivityAdminPanelButtonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#A39DAC"
        android:gravity="center"
        android:text="@string/admin_button"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <Button
                android:id="@+id/applicationActivityButton_1_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:text="@string/button_hint_1"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/applicationActivityButton_2_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/button_hint_2"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <Button
                android:id="@+id/applicationActivityButton_3_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:text="@string/button_hint_3"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/applicationActivityButton_4_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/button_hint_4"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <Button
                android:id="@+id/applicationActivityButton_5_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:text="@string/button_hint_5"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/applicationActivityButton_6_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/button_hint_6"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <Button
                android:id="@+id/applicationActivityButton_7_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:text="@string/button_hint_7"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/applicationActivityButton_8_ButtonID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/button_hint_8"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>